# appium-traverser

./: .env copy.example  .env.example  .gitignore  AGENT_ARCHITECTURE.md  CONSOLIDATED_SETUP_GUIDE.md  MCP_SECURITY_REVIEW_T030.md  README.md  SETUP_GUIDE.md  Script Setup  __init__.py  agent-requirements.txt  app_state_checkpoint.pkl  appium-traverse.py  appium_traverse.py  cleanup_dirs.py  cli_test_result.txt  com.ada.app  com.myfitnesspal.android.db  crawler.db  crawler.db-journal  create_desktop_shortcut.bat  create_desktop_shortcut.ps1  elementlocator.py  eu.smartpatient.mytherapy.db  eu.smartpatient.mytherapy_crawl_data.db  fr.doctolib.www  jameda.db  jameda.db-journal  organize_output_data.py  progress_report.md  pyproject.toml  pytest.ini  quick_test_mcp.py  requirements.txt  run_agent_demo.ps1  run_agent_tests.ps1  run_cli.py  run_cli_controller.bat  run_cli_controller.ps1  run_ui.py  (+17 more)
.github/: copilot-instructions.md
app/: main.py
capture_app_traffic/: capture_app_traffic.py
cli/: __init__.py  argument_parser.py  main.py  parser.py
comparison-grid/: create_comparison_grid.py
comparison_grid/: create_comparison_grid.py
config/: app_config.py  config.py  numeric_constants.py  package_constants.py  path_constants.py  urls.py  validation.py
core/: __init__.py  adapters.py  allowed_packages_service.py  config.py  controller.py  crawler.py  crawler_config.py  crawler_loop.py  focus_area_crud.py  health_check.py  packages_crud.py  parser.py  signal_handler.py  storage.py  user_storage.py  validation.py
docs/: ADD_FOCUS_AREA_DIALOG.md  FOCUS_AREAS_GUIDE.md  (+6 more)
(+327 files in other folders)
