[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traverser-ai-api"
version = "0.1.0"

[project.scripts]
run-cli = "traverser_ai_api.cli:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["traverser_ai_api*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "cli: marks tests as CLI tests (deselect with '-m \"not cli\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
known_first_party = ["traverser_ai_api"]