[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traverser"
version = "0.1.0"

[project.scripts]
run-cli = "cli:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "core*", "domain*", "config*", "utils*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "cli: marks tests as CLI tests (deselect with '-m \"not cli\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
known_first_party = ["cli", "core", "domain", "config", "utils"]